--- a/bower.json
+++ b/bower.json
@@ -5,16 +5,16 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "~3",
-    "angular": "~1.3",
-    "angular-resource": "~1.3",
-    "angular-animate": "~1.3",
-    "angular-mocks": "~1.3",
-    "angular-bootstrap": "~0.13",
-    "angular-ui-utils": "bower",
-    "angular-ui-router": "~0.2",
+    "angular": "~1.5",
+    "angular-resource": "~1.5",
+    "angular-animate": "~1.5",
+    "angular-mocks": "~1.5",
+    "angular-bootstrap": "~2.3.1",
+    "angular-ui-router": "~0.2.18",
     "angular-file-upload": "1.1.5",
     "angular-messages": "~1.3.17",
-    "owasp-password-strength-test": "~1.3.0"
+    "owasp-password-strength-test": "~1.3.0",
+    "isteven-angular-multiselect": "https://github.com/isteven/angular-multi-select.git#4.0.0"
   },
   "resolutions": {
     "angular": "~1.3"
