--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "angular-file-upload": "1.1.5",
     "angular-messages": "~1.3.17",
     "owasp-password-strength-test": "~1.3.0",
-    "isteven-angular-multiselect": "https://github.com/isteven/angular-multi-select.git#4.0.0"
+    "isteven-angular-multiselect": "https://github.com/isteven/angular-multi-select.git#4.0.0",
+    "moment": "^2.17.1",
+    "angular-moment": "^1.0.1"
   },
   "resolutions": {
     "angular": "~1.3"
